<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_account_box_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_egzersiz"
            android:icon="@drawable/baseline_fitness_center_24"
            android:title="@string/menu_egzersiz" />
        <item
            android:id="@+id/nav_diyet"
            android:icon="@drawable/baseline_emoji_food_beverage_24"
            android:title="@string/menu_diyet" />
        <item
            android:id="@+id/nav_beslenme"
            android:icon="@drawable/baseline_restaurant_24"
            android:title="@string/menu_beslenme" />
        <item
            android:id="@+id/nav_biliyomusun"
            android:icon="@drawable/baseline_help_outline_24"
            android:title="@string/menu_biliyomusun" />
        <item
            android:id="@+id/nav_hakkinda"
            android:icon="@drawable/baseline_tungsten_24"
            android:title="@string/menu_hakkinda" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/baseline_notification_add_24"
            android:title="@string/menu_alarm" />
    </group>

</menu>